Реализована пакетная запись в БД, размер пакета задается в статик классе BatchSize