@@ -1,12 +1,9 @@
 package by.zoomos_v2.service.processing.client;
 
+import by.zoomos_v2.constant.FileStatus;
 import by.zoomos_v2.model.Client;
-import by.zoomos_v2.model.ExportConfig;
-import by.zoomos_v2.model.ExportField;
 import by.zoomos_v2.model.FileMetadata;
-import by.zoomos_v2.service.mapping.ExportConfigService;
-import by.zoomos_v2.service.processing.processor.ProcessingStats;
-import lombok.RequiredArgsConstructor;
+import by.zoomos_v2.service.client.ClientService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
@@ -21,7 +18,7 @@ public class Client1DataProcessor implements ClientDataProcessor {
     /**
      * Список сайтов конкурентов, для которых необходимо очищать данные при обработке
      */
-    private static final List<String> EXCLUDED_COMPETITORS = Arrays.asList(
+    private static final List<String> EXCLUDED_COMPETITORS = List.of(
             "auchan.ru",
             "lenta.com",
             "metro-cc.ru",
@@ -31,38 +28,7 @@ public class Client1DataProcessor implements ClientDataProcessor {
             "winelab.ru"
     );
 
-    public ProcessingResult processData(List<Map<String, String>> data, ExportConfig config) {
-        try {
-            // Валидация данных
-            ValidationResult validationResult = validateData(data);
-            if (!validationResult.isValid()) {
-                return ProcessingResult.error(validationResult.getErrors());
-            }
-
-            // Создаем статистику
-            ProcessingStats stats = ProcessingStats.builder()
-                    .totalCount(data.size())
-                    .build();
-
-            // Обрабатываем данные
-            List<Map<String, String>> processedData = new ArrayList<>();
-            for (Map<String, String> row : data) {
-                try {
-                    Map<String, String> processedRow = processRow(row, config);
-                    processedData.add(processedRow);
-                    stats.incrementSuccessCount();
-                } catch (Exception e) {
-                    log.error("Error processing row: {}", row, e);
-                    stats.incrementErrorCount(e.getMessage(), "Error processing data row");
-                }
-            }
-
-            return ProcessingResult.success(processedData, stats);
-
-        } catch (Exception e) {
-            log.error("Error processing data for client {}: {}", config.getClient().getName(), e.getMessage(), e);
-            return ProcessingResult.error(e.getMessage());
-        }
+    public Client1DataProcessor(ClientService clientService) {
     }
 
     @Override
@@ -78,18 +44,18 @@ public class Client1DataProcessor implements ClientDataProcessor {
                 return result;
             }
 
+            // Проверяем каждую строку данных
             for (int i = 0; i < data.size(); i++) {
                 Map<String, String> row = data.get(i);
-                if (!row.containsKey("competitorName")) {
-                    errors.add(String.format("Строка %d: отсутствует обязательное поле 'competitorName'", i + 1));
-                }
+                validateRequiredFields(row, i + 1, errors);
+                validateDataFormats(row, i + 1, errors);
             }
 
             result.setValid(errors.isEmpty());
             result.setErrors(errors);
 
         } catch (Exception e) {
-            log.error("Error validating data: {}", e.getMessage(), e);
+            log.error("Ошибка валидации данных: {}", e.getMessage(), e);
             errors.add("Ошибка валидации: " + e.getMessage());
             result.setValid(false);
             result.setErrors(errors);
@@ -100,38 +66,88 @@ public class Client1DataProcessor implements ClientDataProcessor {
 
     @Override
     public void processFile(FileMetadata fileMetadata, List<Map<String, String>> data) {
-        // Реализация обработки файла если нужно
+        try {
+            log.info("Начало обработки файла {} для клиента {}",
+                    fileMetadata.getOriginalFilename(),
+                    fileMetadata.getClientId());
+
+            // Обновляем статус файла
+            fileMetadata.updateStatus(FileStatus.PROCESSING, null);
+
+            // Обработка данных
+            List<Map<String, String>> processedData = new ArrayList<>();
+            int successCount = 0;
+            List<String> errors = new ArrayList<>();
+
+            for (Map<String, String> row : data) {
+                try {
+                    Map<String, String> processedRow = processRow(row);
+                    processedData.add(processedRow);
+                    successCount++;
+                } catch (Exception e) {
+                    errors.add("Ошибка обработки строки: " + e.getMessage());
+                }
+            }
+
+            // Обновляем статистику
+            fileMetadata.updateProcessingStatistics(
+                    data.size(),
+                    successCount,
+                    errors.size()
+            );
+
+            // Если были ошибки, добавляем их
+            errors.forEach(fileMetadata::addProcessingError);
+
+            // Обновляем статус файла
+            if (errors.isEmpty()) {
+                fileMetadata.updateStatus(FileStatus.COMPLETED, null);
+            } else {
+                fileMetadata.updateStatus(FileStatus.ERROR,
+                        "Обработано с ошибками: " + errors.size() + " из " + data.size());
+            }
+
+            log.info("Завершение обработки файла {}. Успешно: {}, Ошибок: {}",
+                    fileMetadata.getOriginalFilename(), successCount, errors.size());
+
+        } catch (Exception e) {
+            log.error("Ошибка при обработке файла: {}", e.getMessage(), e);
+            fileMetadata.updateStatus(FileStatus.ERROR, e.getMessage());
+        }
     }
 
     @Override
     public void afterProcessing(FileMetadata metadata) {
-        // Реализация пост-обработки если нужно
+        // Дополнительные действия после обработки
+        if (FileStatus.COMPLETED.equals(metadata.getStatus())) {
+            log.info("Пост-обработка файла {}", metadata.getOriginalFilename());
+            // Здесь можно добавить специфичную логику
+        }
     }
 
     @Override
     public boolean supports(Client client) {
-        // TODO: Добавить правильную идентификацию клиента
-        return client.getId().equals(1L); // или другой способ идентификации клиента
+        return client != null && client.getId().equals(1L);
     }
 
-    private Map<String, String> processRow(Map<String, String> row, ExportConfig config) {
-        Map<String, String> processedRow = new HashMap<>();
+    private void validateRequiredFields(Map<String, String> row, int rowNumber, List<String> errors) {
+        if (!row.containsKey("competitorName")) {
+            errors.add(String.format("Строка %d: отсутствует обязательное поле 'competitorName'", rowNumber));
+        }
+    }
 
-        // Обработка competitorName
+    private void validateDataFormats(Map<String, String> row, int rowNumber, List<String> errors) {
+        // Проверка форматов конкретных полей
+    }
+
+    private Map<String, String> processRow(Map<String, String> row) {
+        // Очистка данных о конкурентах
         String competitorName = row.get("competitorName");
         if (competitorName != null && EXCLUDED_COMPETITORS.contains(competitorName.toLowerCase())) {
-            competitorName = "";
+            row.put("competitorName", "");
             log.debug("Очищено значение конкурента: {}", competitorName);
         }
 
-        // Применяем конфигурацию экспорта
-        for (ExportField field : config.getFields()) {
-            if (field.isEnabled()) {
-                String value = field.getSourceField().equals("competitorName") ?
-                        competitorName : row.get(field.getSourceField());
-                processedRow.put(field.getDisplayName(), value != null ? value : "");
-            }
-        }
-        return processedRow;
+        return row;
     }
 }
